--- a/Server/package.json
+++ b/Server/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.1",
     "nodemailer": "^6.9.4",
+    "razorpay": "^2.9.1",
     "validator": "^13.9.0"
   }
 }
