--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "country-state-city": "^3.1.4",
     "dotenv": "^16.3.1",
     "js-cookie": "^3.0.5",
     "overlay-navbar": "^1.2.3",
